--- a/fargate-firelens/package.json
+++ b/fargate-firelens/package.json
@@ -25,7 +25,10 @@
     "@aws-cdk/aws-ecs": "^1.117.0",
     "@aws-cdk/aws-ecs-patterns": "^1.117.0",
     "@aws-cdk/aws-iam": "^1.117.0",
+    "@aws-cdk/aws-kinesisfirehose": "^1.118.0",
+    "@aws-cdk/aws-kinesisfirehose-destinations": "^1.118.0",
     "@aws-cdk/aws-logs": "^1.117.0",
+    "@aws-cdk/aws-s3": "^1.118.0",
     "@aws-cdk/core": "1.117.0",
     "source-map-support": "^0.5.16"
   }
